Actualizacon, se quito el descarga de pdf automatico, como tambien la impresion por iframe, en ves de eso solo se rediregie a la pagina y desde la aplicacion de raw imprimirlo

--- a/Index.html
+++ b/Index.html
@@ -96,7 +96,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>          
-        <button type="button" class="btn btn-primary" onclick="imprimirTicket()">Imprimir</button>
+<a href="Ticket.html" class="btn btn-primary" target="_blank">Imprimir</a>
+
             </div>
         </div>
     </div>
