Nuevo diseño de ticket

--- a/Ticket.html
+++ b/Ticket.html
@@ -55,7 +55,10 @@
 <body>
 
   <div class="center section">
-    <img src="https://github.com/Jhonylux1999/Ultranet/blob/main/logo%20ultranet.png?raw=true" style="width: 50px;" />
+    <!--<img src="https://github.com/Jhonylux1999/Ultranet/blob/main/logo%20ultranet.png?raw=true" style="width: 50px;" />
+  --> 
+    <img src="https://github.com/Jhonylux1999/Ultranet/blob/main/Ultranet%20Navidad.png?raw=true" style="width: 50px;" />
+    
     <div class="bold">ULTRANET</div>
     <div>Uspantán</div>
     <div>Tel: 4964-7515 / 3767-6826</div>
@@ -113,7 +116,7 @@
 
   <div class="center section">
     ULTRANET te desea<br>
-    —Éxito y muchas bendiciones—
+    —Feliz Navidad y un próspero Año Nuevo—
   </div>
 
   <!--
