Correccion de detalles de factura
Se corrigieron faltas de ortagrafia y datos erroneos

--- a/Contable/Factura.html
+++ b/Contable/Factura.html
@@ -46,12 +46,12 @@
     <!-- Encabezado -->
     <div class="invoice-header d-flex justify-content-between align-items-center">
       <div>
-        <img src="https://github.com/Jhonylux1999/Ultranet/blob/main/logo%20ultranet.png?raw=true" alt="Comercial Eusebio" class="logo">
+        <img src="https://github.com/Jhonylux1999/Ultranet/blob/main/logo%20ultranet.png?raw=true" alt="ULTRANET" class="logo">
       </div>
       <div class="text-end">
         <h5>ULTRANET</h5>
-        <p>NIT: 28275128</p>
-        <p>MERCADO MUNICIPAL 1 Y 2, USPANTÁN, QUICHÉ</p>
+        <p>NIT: 106394967</p>
+        <p>7 CALLE, ZONA 2, USPANTAN, QUICHE</p>
       </div>
     </div>
 <!-- Datos Fiscales -->
@@ -59,7 +59,6 @@
 <table class="table table-sm table-bordered">
   <tr>
     <th class="fw-bold">DTE:</th><td id="DTE"></td>
-        <th class="fw-bold">Le Atendio:</th><td id="Vendedor">Hermelindo Lux Castro</td>
 
     <!--<th class="fw-bold">Fecha Certificacion:</th><td id="Certificacion"></td>-->
 
@@ -114,7 +113,6 @@
   
 <div class="invoice-footer">
   <p>Factura emitida conforme a las disposiciones de la SAT Guatemala</p>
-  <p><strong>Sujeto a pagos trimestrales ISR</strong></p>
   <p>Gracias por su compra</p>
   <p class="text-muted" style="font-size: 11px;">
     Desarrollado por Grupo MayaTéch |Tel:+502 4086-2520
