--- a/Contable/TicketContable.html
+++ b/Contable/TicketContable.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       font-size: 12px;
       margin: 0;
-      padding: 0;
+      padding-left: 15px;
     }
     .center {
       text-align: center;
